<resources>
    <string name="app_name">BeatBlocks</string>
    <string name="title_activity_start_screen">StartScreenActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_help">HelpActivity</string>

    <string name="welcome">Welcome to Beat Blocks!</string>
    <string name="about">Beat Blocks is a rhythm-puzzle game where you put your skills
                        to the test in order to achieve the top score.</string>
    <string name="how_to">How to play</string>
    <string name="bullet_one">\u2022 Make matches of 3 or more to remove a block and gain points.</string>
    <string name="bullet_two">\u2022 To make a successful move you must move a block while
                            a beat is in the accepting region of the beat map.</string>
    <string name="bullet_three">\u2022 If you miss 3 beats it\'s game over!</string>
    <string name="bullet_four">\u2022 Have fun!</string>
</resources>