<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="group.cs242.beatblocks.HelpActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backButton"
        android:src="@mipmap/back"
        android:layout_margin="10dp"
        android:scaleX="1.5"
        android:scaleY="1.5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="roboto"
        android:id="@+id/welcomeView"
        android:textStyle="bold"
        android:layout_below="@+id/backButton"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:fontFamily="roboto"
        android:id="@+id/aboutView"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/welcomeView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to"
        android:fontFamily="roboto"
        android:id="@+id/howToView"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/aboutView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bullet_one"
        android:fontFamily="roboto"
        android:id="@+id/bulletOneView"
        android:layout_below="@+id/howToView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bullet_two"
        android:fontFamily="roboto"
        android:id="@+id/bulletTwoView"
        android:layout_below="@+id/bulletOneView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bullet_three"
        android:fontFamily="roboto"
        android:id="@+id/bulletThreeView"
        android:layout_below="@+id/bulletTwoView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bullet_four"
        android:fontFamily="roboto"
        android:id="@+id/bulletFourView"
        android:layout_below="@+id/bulletThreeView"
        android:layout_alignParentStart="true" />


</RelativeLayout>
